Prevent pre from overflowing

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 div {
 	margin: 0% auto;
 	width: 75%;
-	min-width: 520px;
+	min-width: 800px;
 	background: #FFF;
 	border: 1px solid hsl(0,0%,92%);
 	border-radius: 2px;
